--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body { font-size:12px; font-family:나눔고딕; }
 			.logo { float:left; margin-left:50px; margin-top:8px; position:absolute; width:100px; height:90px; z-index:1; }
 				.login ul { position:absolute; z-index:1; margin-left:1000px; margin-top:20px; }
 					.login ul li { display:inline; color:#bbb; }
-						.login ul li a { color:#bbb; font-family:나눔고딕; font-weight:bold; }
+						.login ul li a { color:#bbb; font-family: 'Esamanru3Regular'; }
 						.login ul li a img { margin-left:8px; cursor:pointer; z-index:1; }
 						.login ul li a:hover { color:#ffb033; }
 		
@@ -23,64 +23,68 @@ body { font-size:12px; font-family:나눔고딕; }
 					#mainSlide li img { width:1200px; height:500px; }
 		
 		#popUp { position:relative; z-index:999; }
-				.popBt { position:absolute; left:425px; top:514px; width:400px; height:30px; z-index:3; }
+				.popBt { position:absolute; left:425px; top:514px; width:400px; height:30px; z-index:3;  }
 					.today { float:left; cursor:pointer; }
 					.esc { float:right; cursor:pointer; }
-						.popBt li a { font-size:17px; color:#aaa; font-weight:bold;  }
+						.popBt li a { font-size:17px; color:#aaa; font-family: 'Esamanru4Medium'; }
 						.popBt li a:hover { color:#fff; }
+			.popupImg img { box-shadow:0 0 20px #818181; }
 				.popupImg p { position:absolute; top:30px; left:400px; z-index:2; }
 				
 				&.on { display: block; background-color: #fff; }
 		
 		#mainNav img { position:relative; top:-50px; z-index:1; }
 		#navGnb { position:relative; }			
-			#gnb { position:absolute; top:-85px; z-index:3; left:150px;  }
-				#gnb li {  float:left; text-align:center; width:150px;  }
-					.snd { width:150px; height:50px; text-align:center; line-height:20px; }
+			#gnb { position:absolute; top:-100px; z-index:3; left:150px;  }
+				#gnb li {  float:left; text-align:center; width:150px; line-height:20px; }
+					.snd { width:150px; height:50px; text-align:center; line-height:50px; }
 						#gnb ul { display:none; }
-						.snd a { color:#d8d8d8; font-family:이사만루체; font-size:16px; }
+						.snd a { color:#d8d8d8; font-family:이사만루체; font-size:16px;  }
 							.snd a:hover { color:#ffb033; }
+						
+		
 				
 				/* 360도 */
-				.sub1 { height:130px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				
+				.sub1 { height:130px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub1 li { padding-top:15px; }
 					.sub1 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub1 li a:hover { color:#feba4d; }
+						.sub1 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub1 { display:block; }*/
 				
 				/* 지역별 펜션 */
-				.sub2 { height:480px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				.sub2 { height:480px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub2 li { padding-top:15px; }
 					.sub2 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub2 li a:hover { color:#feba4d; }
+						.sub2 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub2 { display:block; }*/
 						
 				/* 숙박 객실 */
-				.sub3 { height:340px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				.sub3 { height:340px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub3 li { padding-top:15px; }
 					.sub3 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub3 li a:hover { color:#feba4d; }
+						.sub3 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub3 { display:block; }*/
 						
 				/* 바베큐 펜션 */
-				.sub4 { height:130px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				.sub4 { height:130px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub4 li { padding-top:15px; }
 					.sub4 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub4 li a:hover { color:#feba4d; }
+						.sub4 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub4 { display:block; }*/
 						
 				/* 즐길 거리 */
-				.sub5 { height:305px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				.sub5 { height:305px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub5 li { padding-top:15px; }
 					.sub5 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub5 li a:hover { color:#feba4d; }
+						.sub5 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub5 { display:block; }*/
 						
 				/* 예약 안내 */
-				.sub6 { height:95px; background-color:#aaa; border-radius:20px; padding-top:10px; }
+				.sub6 { height:95px; background-color:rgba(0,0,0,0.3); border-radius:20px; padding-top:10px; }
 					.sub6 li { padding-top:15px; }
 					.sub6 li a { color:#fff; font-size:14px; text-shadow:0 0 5px #000; }
-						.sub6 li a:hover { color:#feba4d; }
+						.sub6 li a:hover { color:#ffb033; }
 						/*#gnb li:hover ul.sub6 { display:block; }*/
 					
 
@@ -114,29 +118,26 @@ body { font-size:12px; font-family:나눔고딕; }
 				#vb4 { position:absolute; top:241px; left:0px; width:207px; height:240px; background-color:rgba(255,255,255,0.7); display:inline-block; text-align:center; margin-right:30px;}
 					
 				.val { margin-top:80px; font-family:이사만루체; font-size:17px; margin-bottom:10px; }
-					.inwon { font-family:나눔고딕; font-size:11px; font-weight:500; }
+					.inwon {  font-size:11px; font-family: 'Esamanru3Regular'; }
 					.readTop { background-color:#ffb033; width:133px; height:23px; color:#fff; font-weight:bold;  line-height:23px; border-radius:50px; margin-left:35px; margin-top:20px; }
 					.readTop:hover { background-color:#bc7400; }
 							
 			#bt { margin-left:160px; margin-top:50px; }
 				.top { margin-right:30px; margin-bottom:100px; float:left; display:inline-block; }
 					.top img { box-shadow:0 0 5px #ccc; margin-bottom:10px;}
-					.top p { font-size:15px; font-weight:600; }
-					.top span { float:right; color:#888; font-size:12px; font-weight:normal; padding-top:4px; }
+					.top p { font-size:15px; font-family: 'Esamanru4Medium'; }
+					.top span { float:right; color:#888; font-size:12px; font-family: 'Esamanru3Regular'; padding-top:4px; }
 			
 			.bbqTop { float:clear; }
 			#qt { margin-left:160px; margin-top:50px; }	
 				.bbq { margin-right:30px;  float:left; display:inline-block; }
 					.bbq img { box-shadow:0 0 5px #ccc; margin-bottom:10px; }
-					.bbq p { font-size:15px; font-weight:600; }
-					.bbq span { float:right; color:#888; font-size:12px; font-weight:normal; padding-top:4px; }
+					.bbq p { font-size:15px; font-family: 'Esamanru4Medium'; }
+					.bbq span { float:right; color:#888; font-size:12px; font-family: 'Esamanru3Regular'; padding-top:4px; }
 				
 			#contents { float:clear; }
 					.enjoyText { position:absolute; top:1720px; z-index:2; }
 					
-				#sb { position:relative; }
-					.slideBt { width:180px; position:absolute; left:545px; top:930px; z-index:999; }
-						.slideBt li { display:inline-block; cursor:pointer; margin-right:3px; }
 				
 			#parent2 { float:left; position:relative; width:1200px; height:569px; margin:150px 0 50px 0; }
 				#playSlide {/* z-index:1;*/ width:6000px; height:569px; box-shadow:0 0 20px #bbb; }
@@ -147,24 +148,24 @@ body { font-size:12px; font-family:나눔고딕; }
 		#reservation { float:clear; }
 			#ane { position:relative; }
 				.yeyak { position:absolute; top:-245px; left:360px; }
-				.yeyakAne a { position:absolute; top:-115px; left:330px; color:#fff; width:183px; height:29px; background-color:#2b3c1b; border-radius:50px; text-align:center; line-height:29px; font-weight:bold; }
+				.yeyakAne a { position:absolute; top:-115px; left:330px; color:#fff; width:183px; height:29px; background-color:#2b3c1b; border-radius:50px; text-align:center; line-height:29px; font-family: 'Esamanru4Medium'; }
 					.yeyakAne a:hover { background-color:#17200e; }
 				
 				.munyea { position:absolute; top:-245px; left:760px; }
-					.yeyakGongi a { position:absolute; top:-115px; left:725px; color:#fff; width:183px; height:29px; background-color:#2b3c1b; border-radius:50px; text-align:center; line-height:29px; font-weight:bold; }
+					.yeyakGongi a { position:absolute; top:-115px; left:725px; color:#fff; width:183px; height:29px; background-color:#2b3c1b; border-radius:50px; text-align:center; line-height:29px; font-family: 'Esamanru4Medium'; }
 						.yeyakGongi a:hover { background-color:#17200e; }
 
-		#footer { width:100%; height:300px;/* */ background-color:#061d1a; }
-			#samback {  }	
+		#footer { position:relative; width:100%; height:300px; background-color:#061d1a; }
+			#samback { width:1200px; position:absolute; top:0; left:50%; transform:translate(-50%,0); }	
 				.ftLogo { width:60px; height:100px; float:left; margin:70px 0 0 150px; }
 				
-				#footer p { color:#fff;  line-height:25px; }
+				#footer p { color:#fff;  line-height:25px; font-family: 'Esamanru3Regular'; }
 				.iyong { float:left; margin-top:25px;  }
 				.dep { float:left; width:300px; margin:70px 0 0 70px; }
 				.workTime { float:left; margin:70px 0 0 20px; }
 				
-				#footer span { color:#fff; }
-				#footer span a { color:#fff; font-weight:bold; }
+				#footer span { color:#fff; font-family: 'Esamanru4Medium'; }
+				#footer span a { color:#fff; }
 					#footer span a:hover { color:#ffb033; }
 
 				.sns { float:right; margin:70px 130px 0 0; }
